<resources>
    <string name="app_name">How are my kids!</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_view_child">ViewChildActivity</string>
    <string name="title_activity_edit_child">EditChildActivity</string>
    <string name="save_btn">save</string>
    <string name="mainTitle">How are\nMy Kids!</string>
    <string name="configureMyChildren">Configure My Children</string>

    <string name="flip_the_coin">Flip the Coin</string>
    <string name="title_activity_coin_flip">Flip A Coin</string>
    <string name="title_activity_choose_child_coin_flip">Who gets to flip the coin?</string>
    <string name="coin_flip_heads">Heads</string>
    <string name="coin_flip_tails">Tails</string>
    <string name="title_activity_coin_flip_history">Coin Flip History</string>
    <string name="coin_flip_history_button_text">View History</string>
    <string name="message_layout_heads_button_text">Heads</string>
    <string name="message_layout_tails_button_text">Tails</string>
    <string name="message_layout_text">Select</string>
    <string name="coin_flip_history_single">Show all</string>
    <string name="coin_flip_history_all">Show only %s</string>
    <string name="coin_flip_history_oracle_all">"History"</string>
    <string name="coin_flip_history_oracle_single">"History of %s"</string>
    <string name="coin_flip_heads_tails_or">" OR "</string>
    <string name="coin_flip_select_select">Who gets to flip the coin next:</string>
    <string name="win_lose_content">Win Lose Icon</string>
    <string name="avatar_content">Avatar</string>
    <string name="coin_content">Coin</string>
    <string name="tails_coin_desc">Tails</string>
    <string name="heads_coin_desc">Heads</string>
    <string name="title_activity_change_child_coin_flip">Who gets to flip a coin instead?</string>
    <string name="coin_flip_choose_pick">Pick</string>
    <string name="coin_flip_choose_oracle">%s gets to choose!</string>
    <string name="coin_flip_choose_change_child">Change who gets to flip the coin</string>
    <string name="coin_flip_change_child_other_children">Children (Ordered by who\'s next):</string>

    <string name="countdownTimer">Countdown Timer</string>
    <string name="title_activity_timeout">Timeout</string>
    <string name="stop">STOP</string>
    <string name="custom_timer">Custom Timer</string>
    <string name="set">Set</string>
    <string name="_10">10</string>
    <string name="_5">5</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="reset">Reset</string>
    <string name="start">Start</string>
    <string name="_10_00">10:00</string>
    <string name="str_name">Name</string>
    <string name="str_age">Age</string>
    <string name="str_boy">Boy</string>
    <string name="str_girl">Girl</string>
    <string name="str_select_child">Select Child</string>
    <string name="str_swap_hint">Swap to edit or delete a child</string>
    <string name="msg_edit_hint">Click here to add a child</string>
    <string name="aboutText">About Us</string>
    <string name="about_us_intro_text">We are team &lt;b>Jade&lt;/b>. A very young, and very very awesome group of Android developers. This iteration of our project has given us an opportunity to try out a new role in a development pipeline.
        &lt;br /&gt;The team is as follows:
        &lt;br /&gt;&lt;b>Kelly Zheng&lt;/b>, one blessed with creativity, a writer renowned to become one with her books.
        &lt;br /&gt;&lt;b>Zirui Huang&lt;/b>, a developer truly known for his punctuality and how he gets things done before you assign it to him.
        &lt;br /&gt;&lt;b>Kent Nex&lt;/b>, a cool last name and cooler personality. A mathemagician who can find the double derivative before you can count to 5.
        &lt;br /&gt;&lt;b>Shashank Thanalapati&lt;/b>, a name longer than sanity\'s comprehension and with code retention capabilities greater than your SSD.</string>

    <string name="title_activity_about_us">AboutUs</string>
    <string name="who_are_we">Who are we?</string>
    <string name="citation_title">What we used</string>
    <string name="citations">The resources used in this application are as follows:
        &lt;br /&gt; &lt;b>1. Main menu kids moving gif:&lt;/b> https://gfycat.com/rewardingcalmgroundhog">https://gfycat.com/rewardingcalmgroundhog
        &lt;br /&gt; &lt;b>2. The relaxing video GIFs were taken as snips from the following YouTube video:&lt;/b> &lt;br /&gt;https://www.youtube.com/watch?v=r3fE6FQT82s&amp;ab_channel=DestinationSj%C3%A6lland2
        &lt;br /&gt; &lt;b>3. The sound for the coin flip animation was taken from: &lt;br /&gt;https:&lt;/b> // freesound.org/people/SpaceJoe/sounds/485724/
        &lt;br /&gt; &lt;b>4. The icons for the children, on the add child and configuration page were from flaticon:&lt;/b>  &lt;br /&gt;https://www.flaticon.com/ and https://www.flaticon.com/packs/children-20
        &lt;br /&gt; &lt;b>5. The application Icon (mom, dad and child) was from subPNG:&lt;/b> &lt;br /&gt;https://www.subpng.com/png-hd956q/download.html
    </string>
    <string name="title_activity_task">Tasks</string>
    <string name="taskText">Task</string>
    <string name="title_activity_edit_task">EditTaskActivity</string>
    <string name="taskName">Task Name:</string>
    <string name="taskBriefDescription">Brief Description:</string>
    <string name="assigned_to_who">Assigned to:</string>
    <string name="title_activity_add_task">AddTaskActivity</string>
    <string name="title_activity_popup">PopupActivity</string>

    <string name="title_activity_take_breath">Take A Breathe</string>
    <string name="begin">Begin</string>
    <string name="breath">Breath</string>
    <string name="breath_in">In</string>
    <string name="breath_out">Out</string>
    <string name="breath_help_breath_in">Hold the Button and Breath in</string>
    <string name="breath_good_job">Good Job</string>
    <string name="breath_help_breath_out">Release the button and breath out</string>

    <string name="initial_present_speed">Present Speed: 100%</string>
    <string name="speed25">Present speed: 25%</string>
    <string name="speed50">Present speed: 50%</string>
    <string name="speed75">Present speed: 75%</string>
    <string name="speed100">Present speed: 100%</string>
    <string name="speed200">Present speed: 200%</string>
    <string name="speed300">Present speed: 300%</string>
    <string name="speed400">Present speed: 400%</string>
    <string name="menu_25">25%</string>
    <string name="menu_50">50%</string>
    <string name="menu_75">75%</string>
    <string name="menu_100">100% (normal)</string>
    <string name="menu_200">200%</string>
    <string name="menu_300">300%</string>
    <string name="menu_400">400%</string>
    <string name="str_custom_avatar">Custom Avatar</string>
    <string name="number_of_breathes">Number of Breathes:</string>
    <string name="who_is_the_task_assigned_to">Who is the task assigned to?</string>
    <string name="task_name">Task Name</string>
    <string name="from_gallery">From Gallery</string>
    <string name="take_photo">Take Photo</string>
    <string name="no_children_in_database">No children in database</string>
    <string name="separate_trash_recycle_and_compost_and_throw_it_out">Separate trash, recycle and compost, and throw it out!</string>
    <string name="confirm">Confirm</string>
    <string name="take_out_the_trash">Take out the trash!</string>
    <string name="completed">Completed</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
</resources>