<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/speed25"
        android:title="@string/menu_25"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/speed50"
        android:title="@string/menu_50"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/speed75"
        android:title="@string/menu_75"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/speed100"
        android:title="@string/menu_100"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/speed200"
        android:title="@string/menu_200"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/speed300"
        android:title="@string/menu_300"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/speed400"
        android:title="@string/menu_400"
        app:showAsAction="never"
        />
</menu>