<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/calmBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="17dp" />

    <ProgressBar
        android:id="@+id/timerProgressBG"
        style="?android:progressBarStyleHorizontal"
        android:layout_width="236dp"
        android:layout_height="227dp"
        android:layout_marginStart="143dp"
        android:layout_marginTop="127dp"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="523dp"
        android:progress="100"
        android:progressDrawable="@drawable/circle_progress_bar_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/timerProgress"
        style="?android:progressBarStyleHorizontal"
        android:layout_width="236dp"
        android:layout_height="227dp"
        android:layout_marginStart="143dp"
        android:layout_marginTop="127dp"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="523dp"
        android:progress="100"
        android:progressDrawable="@drawable/circle_progress_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/countdownText"
        android:layout_width="142dp"
        android:layout_height="68dp"
        android:layout_marginStart="143dp"
        android:layout_marginTop="127dp"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="523dp"
        android:background="@drawable/main_button_bg"
        android:text="@string/_10_00"
        android:textAlignment="center"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/resetCountdown"
        android:layout_width="164dp"
        android:layout_height="45dp"
        android:layout_marginTop="512dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="46dp"
        android:background="@drawable/main_button"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/startCountdown"
        android:layout_width="164dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="512dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="46dp"
        android:background="@drawable/main_button"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/resetCountdown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/min1Button"
        android:layout_width="54dp"
        android:layout_height="51dp"
        android:layout_marginTop="255dp"
        android:layout_marginBottom="297dp"
        android:background="@drawable/main_button"
        android:text="@string/_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/min2Button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/min2Button"
        android:layout_width="54dp"
        android:layout_height="51dp"
        android:layout_marginTop="255dp"
        android:layout_marginBottom="297dp"
        android:background="@drawable/main_button"
        android:text="@string/_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/min3Button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/min1Button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/min3Button"
        android:layout_width="54dp"
        android:layout_height="51dp"
        android:layout_marginTop="255dp"
        android:layout_marginBottom="297dp"
        android:background="@drawable/main_button"
        android:text="@string/_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/min5Button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/min2Button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/min5Button"
        android:layout_width="54dp"
        android:layout_height="51dp"
        android:layout_marginTop="255dp"
        android:layout_marginBottom="297dp"
        android:background="@drawable/main_button"
        android:text="@string/_5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/min10Button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/min3Button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/min10Button"
        android:layout_width="54dp"
        android:layout_height="51dp"
        android:layout_marginTop="255dp"
        android:layout_marginBottom="297dp"
        android:background="@drawable/main_button"
        android:text="@string/_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/min5Button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/customButton"
        android:layout_width="75dp"
        android:layout_height="36dp"
        android:layout_marginTop="352dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="215dp"
        android:background="@drawable/main_button"
        android:text="@string/set"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/stopButton"
        android:layout_width="310dp"
        android:layout_height="76dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="380dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="147dp"
        android:text="@string/stop"
        android:textSize="24sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/customTimerText"
        android:layout_width="134dp"
        android:layout_height="45dp"
        android:layout_marginStart="89dp"
        android:layout_marginTop="352dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="212dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/custom_timer"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/customButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>







