<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/coin_flip_history_oracle_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0"
        android:text="@string/coin_flip_history_oracle_single"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/coin_flip_history_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:descendantFocusability="afterDescendants"
        app:layout_constraintBottom_toTopOf="@+id/coin_flip_history_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coin_flip_history_oracle_text">

    </ListView>

    <ToggleButton
        android:id="@+id/coin_flip_history_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/coin_flip_history_all"
        android:textOn="@string/coin_flip_history_single"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>