<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/calmBackground"
        android:layout_width="match_parent"
        android:layout_height="399dp"
        android:layout_marginTop="250dp"
        android:layout_marginBottom="2dp"
        android:adjustViewBounds="true"
        android:src="@drawable/kids"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="-20dp"/>

    <TextView
        android:id="@+id/welcome"
        android:layout_width="263dp"
        android:layout_height="173dp"
        android:layout_marginBottom="160dp"
        android:gravity="center"
        android:text="@string/mainTitle"
        android:textColor="#3E689F"
        android:textSize="46sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.059" />

    <Button
        android:id="@+id/configureButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="246dp"
        android:layout_height="64dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/main_button"
        android:text="@string/configureMyChildren"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/countdownButton"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/countdownButton"
        app:layout_constraintTop_toBottomOf="@+id/welcome"
        app:layout_constraintVertical_bias="0.129" />

    <Button
        android:id="@+id/flipButton"
        android:layout_width="246dp"
        android:layout_height="64dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/main_button"
        android:text="@string/flip_the_coin"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/aboutButton"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/aboutButton"
        app:layout_constraintTop_toBottomOf="@+id/countdownButton"
        app:layout_constraintVertical_bias="0.201" />

    <Button
        android:id="@+id/aboutButton"
        android:layout_width="246dp"
        android:layout_height="64dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/main_button"
        android:text="@string/aboutText"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flipButton"
        app:layout_constraintVertical_bias="0.485" />

    <Button
        android:id="@+id/countdownButton"
        android:layout_width="246dp"
        android:layout_height="64dp"
        android:layout_marginBottom="96dp"
        android:background="@drawable/main_button"
        android:text="@string/countdownTimer"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/flipButton"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/flipButton"
        app:layout_constraintTop_toBottomOf="@+id/configureButton"
        app:layout_constraintVertical_bias="0.185" />

</androidx.constraintlayout.widget.ConstraintLayout>