<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <ImageView
        android:id="@+id/coin_flip_history_child_avatar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/avatar_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/coin_flip_history_history_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/coin_flip_history_child_avatar"
        app:layout_constraintStart_toEndOf="@+id/coin_flip_history_child_avatar"
        app:layout_constraintTop_toTopOf="@+id/coin_flip_history_child_avatar" />

    <ImageView
        android:id="@+id/coin_flip_history_win_lose_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/win_lose_content"
        app:layout_constraintBottom_toBottomOf="@+id/coin_flip_history_child_avatar"
        app:layout_constraintEnd_toStartOf="@+id/coin_flip_history_coin_chosen"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/coin_flip_history_child_avatar"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/x_mark" />

    <ImageView
        android:id="@+id/coin_flip_history_coin_chosen"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/coin_content"
        app:layout_constraintBottom_toBottomOf="@+id/coin_flip_history_child_avatar"
        app:layout_constraintEnd_toStartOf="@+id/coin_flip_history_date_time"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/coin_flip_history_child_avatar"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/coin_flip_history_date_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/coin_flip_history_child_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/coin_flip_history_child_avatar" />


</androidx.constraintlayout.widget.ConstraintLayout>